@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.6.2) unstable; urgency=low
   * session: use rwlock for the session manager
   * proxy-handler: pass request headers to the remote HTTP server
   * proxy-handler: forward original Accept-Charset if processor is disabled
+  * pipe: don't filter resources without a body
 
  --
 
